    Frobenius).

  * `heaviside` accepts a second argument for its value at zero.

  * `isfinite` behaves correctly for variables (and is documented).

  * New experimental Python communication using the native Python/C
    interface, due to Abhinav Tripathi during Google Summer of Code 2016.

  * Bug fix: assign `[]` to row/column removes that that row/column.



octsympy 2.4.1-dev
==================

  * ezplot supports implicit plotting of f(x, y) == 0.



octsympy 2.4.0 (2016-05-24)
===========================

  * New symbolic commands:

          acsc          csch          gammaln       polylog
          asec          dilog         hypergeom     psi
          asech         ei            hypot         resize
          besseljn      expint        igamma        sech
          besselyn      ezsurf        jordan        signIm
          cat           fresnelc      laguerreL     sinint
          cosint        fresnels      lgamma        sinhint
          coshint       gammainc      logint        ssinint

  * Move some functions from the "specfun" package.  So now the Symbolic
    package includes some numerical (@double/@single) implementations:

          dirac
          heaviside
          laguerreL
          lambertw

  * Re-implement @double/laguerreL for numerical stability.

  * Add spherical Bessel functions: these are called `besseljn` and
    `besselyn` (for now, subject to change).  Thanks to Utkarsh Gautam.

  * Fix: `@sym/dot` consistent with `@double/dot` thanks to Alex Vong.

  * The environment variable `PYTHON` controls which Python executable is
    used.  The command
         `sympref python C:\bin\python`
    has been deprecated; instead please use:
         `setenv PYTHON C:\bin\python`

  * Improve support for Windows.  Thanks to Abhinav Tripathi, Tatsuro
    Matsuoka, finalsnd, and Mike Miller.

  * Installation scripts merely warn if Python and SymPy aren't found.



octsympy 2.3.0 (2016-04-08)
===========================

  * New commands:
