@@ -189,7 +189,7 @@ end
 %!   x = sym('x', A{i});
 %!   a = assumptions(x);
 %!   assert(strcmp(a{1}, ['x: ' A{i}] ))
-%!   s1 = char(x);
+%!   s1 = x.pickle;
 %!   s2 = ['Symbol(''x'', ' A{i} '=True)'];
 %!   assert (strcmp (s1, s2))
 %! end
