@@ -101,7 +101,7 @@ function L = findsymbols(obj, dosort)
   if dosort
     Ls = {};
     for i=1:length(L)
-      Ls{i} = char(L{i});
+      Ls{i} = L{i}.pickle;
     end
     [tilde, I] = unique(Ls);
     L = L(I);
