@@ -48,7 +48,7 @@ function obj = check_and_convert(var_pyobj)
     elseif (py.isinstance(x, list_or_tuple))
       obj{i} = check_and_convert(x);
     elseif (py.isinstance (x, string_types))
-      obj{i} = char (x);
+      obj{i} = x.pickle;
     elseif (py.isinstance(x, builtins.dict))
       make_str_keys = pyeval ('lambda x: {str(k): v for k, v in x.items()}');
       x = pycall (make_str_keys, x);
